<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kontak</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="add">ADD CONTACT</string>
    <string name="view">VIEW CONTACT</string>
    <string name="about">ABOUT</string>
    <string name="exit">EXIT</string>
    <string name="name">Name</string>
    <string name="no">"Number : "</string>
    <string name="save">SAVE CONTACT</string>
    <string name="back">BACK</string>
    <string name="nm_aplikasi">Kontak Gue ver. 1.0</string>
    <string name="fb">Facebook.com/yoesuv</string>
    <string name="edit">EDIT CONTACT</string>

</resources>